src/app/shared/components/token-amount-estimated/token-amount-estimated.component.scss
@import 'src/scss/vars';
@import 'src/scss/mixins';

:host {
  @include iframe-horizontal {
    width: 100%;
  }
}

.bottom-amount {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  justify-content: space-between;

  max-width: 350px;
  height: 100%;

  @include b($mobile-sm) {
    align-items: flex-start;
  }

  @include iframe-vertical {

    align-items: flex-start;
    max-width: unset;

    &_hidden-iframe-stub {
      height: 50px;

      background-color: var(--main-background);
      border-radius: 10px;
    }
  }

  @include iframe-vertical-light {
    &_hidden-iframe-stub {
      background-color: var(--rubic-base-14);
    }
  }

  &__blockchain-and-value {
    display: flex;
    width: 100%;
    margin-bottom: 10px;

    app-iframe-blockchain-indicator {
      margin-right: 15px;
    }

    /* stylelint-disable */
    @include iframe-horizontal {
      margin-bottom: 0;
    }
  }

  &__usd-container {
    @include iframe-card;
    display: inline-flex;
    float: right;

    min-width: 50px;
    overflow: hidden;

    color: var(--form-dim-text-color);
    font-weight: 400;
    font-size: 14px;
    text-align: right;
    text-overflow: ellipsis;

    @include iframe-horizontal {
      position: absolute;
      bottom: -33px;
      left: 0;

      span {
        margin-left: 0;
      };
    }

    @include iframe-vertical {
      width: fit-content;
    }

    span {
      margin-left: 10px;

      @include iframe-vertical {
        margin-left: 0;
      }
    }

    &_placeholder {
      color: rgb(117, 117, 117);
    }
  }

  &__usd {
    overflow: hidden;

    letter-spacing: 0.1em;

    text-align: right;
    text-overflow: ellipsis;
  }

  &__tokens-container {
    width: 100%;
    min-width: 200px;
    height: 40px;
    overflow: auto;

    font-weight: 400;
    font-size: 30px;
    line-height: 40px;
    letter-spacing: 0.1em;
    scrollbar-width: none;

    text-align: right;

    @include iframe-horizontal {
      margin-bottom: 0;

      font-size: 20px;
      text-align: left;
    }

    @include iframe-vertical {
      width: 100%;
      height: 50px;
      padding-left: 16px;

      color: var(--form-bright-text-color);
      font-size: 20px;
      line-height: 50px;
      text-align: start;

      background-color: var(--main-background);
      border-radius: 10px;
    }

    @include iframe-vertical-light {
      background-color: var(--rubic-base-14);
    }

    &::-webkit-scrollbar {
      display: none;
    }

    &_error {
      display: flex;

      height: initial;

      font-weight: 300;
      font-size: 24px;
      letter-spacing: 2px;

      @include b($mobile-sm) {
        font-size: 16px;
      }
    }

    &_placeholder {
      color: rgb(117, 117, 117);
    }
  }

  &__hint {
    display: flex;
    align-items: center;
    margin-left: 10px;

    cursor: pointer;

    &_error {
      float: right;

      ::ng-deep {
        svg path {
          fill: $rubic-warning;
        }
      }
    }
  }

  &__fee {
    color: var(--form-dim-text-color);
    font-weight: 400;
    font-size: 14px;
  }
}

@include b($mobile-md) {
  .bottom-amount {
    display: flex;
    flex-direction: column;

    &__tokens-container {
      padding-top: 0;
    }

    &__usd-container {
      order: 1;
      width: 100%;
      margin-bottom: 0;
      margin-left: 0;

      text-align: left;

      span {
        margin-left: auto;
      }
    }

    &__usd {
      text-align: left;
    }

    &__fee {
      margin-right: 0;
    }
  }
}

@include b($mobile-sm) {
  .bottom-amount {
    &__usd-container {
      span {
        margin-left: 0;
      }
    }

    &__tokens-container {
      text-align: left;
    }
  }
}

